<resources>
    <string name="app_name">WidgetsX</string>
    <string name="home">Home</string>
    <string name="registrar">Registrar</string>
    <string name="telefono">Telefono</string>
    <string name="id_usuario">Id usuario</string>
    <string name="correo">Correo</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="registro">Registro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>